backend/k8s/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "messaging-service,notification-service"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - api.opportune.muhammadadhil.online
    secretName: backend-tls-secret        # Secret name for the TLS certificate
  rules:
  - host: api.opportune.muhammadadhil.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 4002
      - path: /messaging-socket/
        pathType: Prefix
        backend:
          service:
            name: messaging-service
            port:
              number: 3060      
      - path: /notification-socket/
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 3050        
      - path: /api/payment/webhook/
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 3040
